--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- clear button -->
             <div class="text-center">
                 <hr class="bg-white">
-                <input type="button" value="clear" onclick="clearTable()" id="clear" class="text-center btn btn-info">
+                <input type="button" value="clear" onclick="clearTable()" id="clear" class="text-center btn btn-danger">
             </div>
             
             <!-- clear button -->
