--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- output -->
             
             <!-- clear button -->
-            <div class="text-center">
+            <div class="text-center my-3">
                 <hr class="bg-white">
                 <input type="button" value="clear" onclick="clearTable()" id="clear" class="text-center btn btn-danger">
             </div>
